Fixed spacing on contact me mobile page

--- a/src/css/contact-me.css
+++ b/src/css/contact-me.css
@@ -126,6 +126,7 @@
 @media screen and (max-width: 480px) {
     .content-area {
         flex-direction: column;
-        padding-bottom: 35px;
+        height: 85%;
+        align-self: center;
     }
 }
